# Automated_Model_Training_With_Data_Shift_Detection

./: .dockerignore  .gitignore  Dockerfile  README.md  Streamlit_Dockerfile  cloud.sh  pyproject.toml  requirements.txt
dags/: ingestion_dag.py
experimentations/: brazaville-rain-forecasting.ipynb
frontend/: about.py  app.py  chart_utils.py  frontend.py  requirements.txt  utils.py  variables.py  weather_app.py
includes/Callbacks/: alert.py
includes/DataIngestion/: custom_expectations.py  ge_setup.py  scrape_data.py  validate_data.py
includes/Monitoring/: monitor.py  monitoring_utils.py
includes/Training/: train.py
mlruns/0/fbdd0e36ea9c42098e45daeeaec0f829/metrics/: rmse
mlruns/0/fbdd0e36ea9c42098e45daeeaec0f829/tags/: mlflow.runName
mlruns/506336415041176811/39780806cbb44eea9ad445fbd271734d/metrics/: rmse
mlruns/506336415041176811/39780806cbb44eea9ad445fbd271734d/params/: feature_created  learning_rate  target
mlruns/506336415041176811/39780806cbb44eea9ad445fbd271734d/tags/: mlflow.runName
mlruns/624270044587546624/78bd403698cf4e5bb88aff7c46da620c/params/: past_covariates
mlruns/624270044587546624/78bd403698cf4e5bb88aff7c46da620c/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/702986606638949486/46cc2e75b31148f29ce488706ed81a6d/tags/: mlflow.runName
models/rain_forecasting_model/: catboost_model.pkl
shared/: data_utils.py  model_utils.py  variables.py
