[project]
name = "precipitation-forecasting-pipeline"
version = "0.1.0"
description = "An automated prediction forecasting pipeline"
authors = [
    {name = "Edgar Mevaa",email = "mevaed4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "openmeteo-requests (>=1.6.0,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
    "great-expectations (>=1.5.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
